--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Christian Scobie</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" type="image/x-icon" href="./assets/Favicon_Purple/favicon.ico" />
     <script
       src="https://kit.fontawesome.com/0cfb4826b4.js"
       crossorigin="anonymous"
