finalize style edits + thumbnail

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Christian Scobie</title>
-    <link rel="shortcut icon" type="image/png" href="./assets/Favicon_Purple/favicon.ico">
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="./assets/Favicon_Purple/favicon.ico"
+    />
     <link rel="stylesheet" href="./styles.css" />
     <script
       src="https://kit.fontawesome.com/0cfb4826b4.js"
@@ -14,7 +18,13 @@
   <body>
     <section id="about-me">
       <nav>
-        <div class="personal__logo">Christian Scobie</div>
+        <div class="personal__logo">
+          <img
+            src="./assets/Scobie Logos/Scobie Logo - Purple.svg"
+            class="personal__logo--img"
+            alt=""
+          />
+        </div>
         <ul class="nav__link--list">
           <li>
             <a
@@ -94,9 +104,13 @@
               </a>
             </div>
           </div>
-          <figure class="about-me__img--container"></figure>
-          <video controls src="./assets/Iceland-about-me.mp4"></video>
-          </figure>
+          <video
+            poster="./assets/IMG_1267.jpg"
+            class="about-me__img--container"
+            controls
+            src="./assets/Iceland-about-me.mp4"
+            class="about-me__img"
+          ></video>
         </div>
       </div>
     </section>
